deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  labels:
    app: backstage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7007
      targetPort: 7007
      protocol: TCP
  selector:
    app: backstage
